--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,6 +84,9 @@
   * {
     border-color: hsl(var(--border));
   }
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
